# fastmcp-tool

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/fastmcp_tool/: __init__.py  main.py
tests/: __init__.py  echo_server.py  test_main.py
