[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastmcp-tool"
version = "0.1.2"
description = "Command line tool for interacting with MCP servers"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Jonathan Springer", email = "jps@s390x.com" }
]
keywords = ["mcp", "fastmcp", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "asyncclick>=8.3.0.7",
    "fastmcp>=2.12.4",
]

[project.scripts]
fastmcp-tool = "fastmcp_tool.main:fastmcp_tool"

[project.urls]
Homepage = "https://github.com/jonpspri/fastmcp-tool"
Repository = "https://github.com/jonpspri/fastmcp-tool"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.14.0",
    "twine>=6.0.0",
]

[tool.ruff]
line-length = 100
fix = true
output-format = "grouped"
show-fixes = true

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "ARG",  # flake8-unused-arguments
    "ASYNC",# flake8-async
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "COM",  # flake8-commas
    "D",    # pydocstyle
    "DTZ",  # flake8-datetimez
    "E",    # pycodestyle errors
    "EM",   # flake8-errmsg
    "F",    # pyflakes
    "FA",   # flake8-future-annotations
    "FBT",  # flake8-boolean-trap
    "FIX",  # flake8-fixme
    "FLY",  # flynt
    "FURB", # refurb
    "G",    # flake8-logging-format
    "I",    # isort
    "ICN",  # flake8-import-conventions
    "ISC",  # flake8-implicit-str-concat
    "LOG",  # flake8-logging
    "N",    # pep8-naming
    "NPY",  # NumPy-specific rules
    "PD",   # pandas-vet
    "PGH",  # pygrep-hooks
    "PERF", # Perflint
    "PIE",  # flake8-pie
    "PL",   # Pylint
    "PT",   # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # Ruff-specific rules
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "T20",  # flake8-print
    "TID",  # flake8-tidy-imports
    "TRY",  # tryceratops
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]
ignore = [
    "D203", # Incompatible with formatter
    "D211", "D213",  # Incompatible with D203, D212
    "E501",  # line too long (handled by ruff format)
    "COM812", # Missing trailing comma (handled by ruff format)
    "RET501", # Copilot and Clyde Code PR reviewers prefer 'return None' to 'return'
    "SIM105", # contextlib.suppress is slower that try-except-pass
    "SIM108", # Ternary operator - preference
    #  TODO:  Work on bringing these into play
    "PLR0911", "PLR0912", "PLR0913", "PLR0915",  # Complexity findings that make the AI cry
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

